Fix background image on mobile

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,10 +1,21 @@
 @use "../abstracts/mixins" as *;
 
 .home {
+  position: relative;
+}
+
+.background-image {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
   background-image: url(../../img/hero-img.webp);
   background-size: cover;
   background-position: bottom left;
-  background-attachment: fixed;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 
   @include respond(600) {
     background-image: url(../../img/hero-img-mobile.webp);
